[package]
name = "mongo"
version = "0.1.0"
authors = ["fChristenson <fredrik.christenson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "0.14.1"
mongodb = {version = "0.10.0", default-features = false, features = ["async-std-runtime"]}
serde_json = "1.0.53"
serde = "1.0.110"
actix-web = "2.0.0"
actix-rt = "1.1.1"
env_logger = "0.7.1"
uuid = {version = "0.8.1", features=["v4"]}
listenfd = "0.3.3"
